<resources>
    <string name="app_name">MyViewPager_Hw11_Android</string>
    <string name="settings_name">settings</string>
    <string name="title_activity_my_settings">MySettingsActivity</string>

    <string name="tab1_header">Tab 1 settings</string>
    <string name="tab1text_title">tab 1 text value</string>
    <string name="tab1size_title">tab 1 font size</string>
    <string name="tab1color_title">tab 1 color selector</string>
    <string name="tab2text_title">tab 2 text value</string>
    <string name="tab2size_title">tab 2 font size</string>
    <string name="tab2color_title">tab 2 color selector</string>
    <string name="tab2_header">tab 2 settings</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>